<resources>
    <string name="app_name">Logica</string>
    <string name="textapplication">Conjunction (AND)</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>

    <string name="t">T</string>
    <string name="f">F</string>

    <string name="textIncorrect">Incorrect</string>
    <string name="textCorrect">Correct</string>

    <string name="submit">Submit</string>
</resources>
