<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textapplication"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/a"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textApplication" />

    <TextView
        android:id="@+id/textB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/b"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textC"
        app:layout_constraintStart_toEndOf="@+id/textA"
        app:layout_constraintTop_toBottomOf="@+id/textApplication" />

    <TextView
        android:id="@+id/textC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/a_b"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textB"
        app:layout_constraintTop_toBottomOf="@+id/textApplication" />

    <TextView
        android:id="@+id/textT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textA"
        app:layout_constraintStart_toStartOf="@+id/textA"
        app:layout_constraintTop_toBottomOf="@+id/textA" />

    <TextView
        android:id="@+id/textT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textB"
        app:layout_constraintStart_toStartOf="@+id/textB"
        app:layout_constraintTop_toBottomOf="@+id/textB" />

    <TextView
        android:id="@+id/textF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textT1"
        app:layout_constraintStart_toStartOf="@+id/textT1"
        app:layout_constraintTop_toBottomOf="@+id/textT1" />

    <TextView
        android:id="@+id/textT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textT"
        app:layout_constraintStart_toStartOf="@+id/textT"
        app:layout_constraintTop_toBottomOf="@+id/textT" />

    <TextView
        android:id="@+id/textF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textT2"
        app:layout_constraintStart_toStartOf="@+id/textT2"
        app:layout_constraintTop_toBottomOf="@+id/textT2" />

    <TextView
        android:id="@+id/textT3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textF"
        app:layout_constraintStart_toStartOf="@+id/textF"
        app:layout_constraintTop_toBottomOf="@+id/textF" />

    <TextView
        android:id="@+id/textF3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textF2"
        app:layout_constraintStart_toStartOf="@+id/textF2"
        app:layout_constraintTop_toBottomOf="@+id/textF2" />

    <TextView
        android:id="@+id/textF4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textT3"
        app:layout_constraintStart_toStartOf="@+id/textT3"
        app:layout_constraintTop_toBottomOf="@+id/textT3" />

    <EditText
        android:id="@+id/answerVal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textT1"
        app:layout_constraintEnd_toEndOf="@+id/textC"
        app:layout_constraintStart_toStartOf="@+id/textC"
        app:layout_constraintTop_toTopOf="@+id/textT1"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/answerVal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textF"
        app:layout_constraintEnd_toEndOf="@+id/answerVal1"
        app:layout_constraintStart_toStartOf="@+id/answerVal1"
        app:layout_constraintTop_toTopOf="@+id/textF"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/answerVal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textT3"
        app:layout_constraintEnd_toEndOf="@+id/answerVal2"
        app:layout_constraintStart_toStartOf="@+id/answerVal2"
        app:layout_constraintTop_toTopOf="@+id/textT3"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/answerVal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textF4"
        app:layout_constraintEnd_toEndOf="@+id/answerVal3"
        app:layout_constraintStart_toStartOf="@+id/answerVal3"
        app:layout_constraintTop_toTopOf="@+id/textF4"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>